<resources>
    <string name="app_name">Blocks</string>
    <string name="title_activity_difficulty_select">Difficulty select</string>
    <string name="title_activity_custom_difficulty">Custom difficulty</string>
    <string name="title_activity_gridgame">Grid game</string>
    <string name="title_activity_grid_maker_test">GridMaker test</string>
    <string name="grid_size">Grid size</string>
    <string name="width_string">Width</string>
    <string name="height_string">Height</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="custom_difficulty">Custom</string>
    <string name="start_button">Start</string>
    <string name="settings_button">Settings</string>
    <string name="scores_button">Scores</string>
    <string name="min_string">Min</string>
    <string name="max_string">Max</string>
    <string name="block_size">Block size</string>
    <string name="title_activity_win_screen">Win screen</string>
    <string name="congratulations">Congratulations!</string>
    <string name="win_stats">In {1} moves, spanning {3} seconds, you managed to fit all {2} pieces into the grid.</string>
    <string name="restart_game">Restart game</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="not_yet_implemented" >(Not yet implemented)</string>
</resources>
