<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DifficultySelect"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_difficulty_select"
        android:textSize="40sp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:orientation="vertical"
        >

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"
            />

        <Button
            android:id="@+id/easyButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:focusable="true"
            android:onClick="play"
            android:text="@string/easy_difficulty"
            android:textSize="40sp"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"
            />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:focusable="true"
            android:onClick="play"
            android:text="@string/medium_difficulty"
            android:textSize="40sp"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"
            />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:focusable="true"
            android:onClick="play"
            android:text="@string/hard_difficulty"
            android:textSize="40sp"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"
            />

        <Button
            android:id="@+id/customButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:focusable="true"
            android:onClick="custom"
            android:text="@string/custom_difficulty"
            android:textSize="40sp"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"
            />
    </LinearLayout>

</RelativeLayout>
