<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainScreen"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:id="@+id/linearLayout"
        >

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:id="@+id/startButton"
            android:focusable="true"
            android:enabled="true"
            android:textSize="40sp"
            android:onClick="play"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:id="@+id/settingsButton"
            android:focusable="true"
            android:enabled="true"
            android:textSize="40sp"
            android:onClick="openSettings"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_button"
            android:id="@+id/scoresButton"
            android:enabled="false"
            android:focusable="false"
            android:textSize="40sp"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

</RelativeLayout>
