<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:context=".MainScreen"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2"
            android:fillViewport="false"
            android:layout_weight="1"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_custom_difficulty"
                    android:id="@+id/title"
                    android:textSize="40sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:singleLine="false"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/grid_size"
                    android:id="@+id/gridSizeLabel"
                    android:layout_below="@+id/title"
                    android:layout_centerHorizontal="true"
                    />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gridSizeLabel"
                    android:layout_centerHorizontal="true"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:id="@+id/sizeSection">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/width_string"
                        android:id="@+id/widthLabel"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:labelFor="@+id/gridWidthSpinner"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/height_string"
                        android:id="@+id/heightLabel"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:layout_gravity="center_horizontal"
                        android:labelFor="@+id/gridHeightSpinner"/>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gridWidthSpinner"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gridHeightSpinner"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:nestedScrollingEnabled="false"
                        android:soundEffectsEnabled="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        >

                    </NumberPicker>

                </GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/block_size"
                    android:id="@+id/blockSizeLabel"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_below="@+id/sizeSection"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"/>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:id="@+id/blockSizeSection"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/blockSizeLabel">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/min_string"
                        android:id="@+id/blockMinSizeLabel"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_gravity="center_horizontal"
                        android:labelFor="@+id/blockMinSize"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/max_string"
                        android:id="@+id/blockMaxSizeLabel"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:layout_gravity="center_horizontal"
                        android:labelFor="@+id/blockMaxSize"/>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/blockMinSize"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                    </NumberPicker>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/blockMaxSize"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                    </NumberPicker>
                </GridLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:id="@+id/startButton"
            android:layout_centerHorizontal="true"
            android:onClick="startGame"
            />
    </LinearLayout>

</RelativeLayout>
